modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/ServiceWithoutResourceName.bal
package samples.parser;

service HelloService {

  @Path ("/tweet")
  resource {
      int b;
      reply m;
  }
}
